@@ -4,6 +4,7 @@ Lego Editor Change Log
   *  Use otf-util module from ISAAC for common code like search
   *  Switch to Java 8 - get rid of old javaFX versions
   *  Clean up other technical debt / out of date things from the last year and a half.
+  *  Allow setting of the next pending concept ID
 
 2013/08/20 - 1.2.2
   *  Add the ability to create new LegoLists and Legos from a CSV or TSV text file.
